sumo/tests/netgen/errors/false_output/options.netgen
--grid-net --grid-number=10 --grid-length=400 --output-file=output/net.net.xml
